# bebop-solver

./: .env  README.md
src/jam_sdk/: __init__.py  constants.py  example.py  pyproject.toml
src/jam_sdk/solver/: base.py  types.py
src/jam_sdk/src/jam_sdk/: example.py
