[tool.poetry]
name = "jam_sdk"
version = "0.1.0"
description = "Bebop Jam SDK"
authors = ["Bebop <info@bebop.xyz>"]
repository = "https://github.com/bebop-dex/bebop-core"
documentation = "https://github.com/bebop-dex/bebop-core"
packages = [{ include = "jam_sdk", from = "src" }]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
web3 = "^6.6.1"
orjson = "^3.9.2"
eth-utils = "^2.2.0"
websockets = "^11.0.3"
aiocache = "^0.12.2"
eth-typing = "^3.4.0"

[tool.poetry.group.dev.dependencies]
types-jsonschema = "^4.17.0.8"
types-pyyaml = "^6.0.12.10"
types-orjson = "^3.6.2"
types-ujson = "^5.8.0.0"

[tool.deptry.per_rule_ignores]
DEP003 = ["jam_sdk"]
